add source_uri to events swagger schema, universally
