# app/bindings/api/v0/bindings/created_highlight_v1.rb
@@ -14,14 +14,17 @@ require 'date'
 
 module Api::V0::Bindings
   class CreatedHighlightV1
-    # The RFC 3339 section 5.6 date-time when nudge actually occurred.
+    # The RFC 3339 section 5.6 date-time when event actually occurred.
     attr_accessor :client_clock_occurred_at
 
-    # The RFC 3339 section 5.6 date-time when nudge event was sent to the server.
+    # The RFC 3339 section 5.6 date-time when event was sent to the server.
     attr_accessor :client_clock_sent_at
 
     # The data's type.
     attr_accessor :type
+
+    # client browser location when event occurred.
+    attr_accessor :source_uri
 
     # The UUID of the current session, previously generated by the client and submitted in a \"session started\" event.
     attr_accessor :session_uuid
@@ -84,6 +87,7 @@ module Api::V0::Bindings
         :'client_clock_occurred_at' => :'client_clock_occurred_at',
         :'client_clock_sent_at' => :'client_clock_sent_at',
         :'type' => :'type',
+        :'source_uri' => :'source_uri',
         :'session_uuid' => :'session_uuid',
         :'session_order' => :'session_order',
         :'highlight_id' => :'highlight_id',
@@ -104,6 +108,7 @@ module Api::V0::Bindings
         :'client_clock_occurred_at' => :'DateTime',
         :'client_clock_sent_at' => :'DateTime',
         :'type' => :'String',
+        :'source_uri' => :'String',
         :'session_uuid' => :'String',
         :'session_order' => :'Integer',
         :'highlight_id' => :'String',
@@ -136,6 +141,10 @@ module Api::V0::Bindings
 
       if attributes.has_key?(:'type')
         self.type = attributes[:'type']
+      end
+
+      if attributes.has_key?(:'source_uri')
+        self.source_uri = attributes[:'source_uri']
       end
 
       if attributes.has_key?(:'session_uuid')
@@ -199,6 +208,10 @@ module Api::V0::Bindings
         invalid_properties.push('invalid value for "type", type cannot be nil.')
       end
 
+      if @source_uri.nil?
+        invalid_properties.push('invalid value for "source_uri", source_uri cannot be nil.')
+      end
+
       if @session_uuid.nil?
         invalid_properties.push('invalid value for "session_uuid", session_uuid cannot be nil.')
       end
@@ -254,6 +267,7 @@ module Api::V0::Bindings
       return false if @type.nil?
       type_validator = EnumAttributeValidator.new('String', ['org.openstax.ec.created_highlight_v1'])
       return false unless type_validator.valid?(@type)
+      return false if @source_uri.nil?
       return false if @session_uuid.nil?
       return false if @session_order.nil?
       return false if @highlight_id.nil?
@@ -286,6 +300,7 @@ module Api::V0::Bindings
           client_clock_occurred_at == o.client_clock_occurred_at &&
           client_clock_sent_at == o.client_clock_sent_at &&
           type == o.type &&
+          source_uri == o.source_uri &&
           session_uuid == o.session_uuid &&
           session_order == o.session_order &&
           highlight_id == o.highlight_id &&
@@ -308,7 +323,7 @@ module Api::V0::Bindings
     # Calculates hash code according to all attributes.
     # @return [Fixnum] Hash code
     def hash
-      [client_clock_occurred_at, client_clock_sent_at, type, session_uuid, session_order, highlight_id, source_type, source_id, source_metadata, annotation, anchor, color, location_strategies, scope_id].hash
+      [client_clock_occurred_at, client_clock_sent_at, type, source_uri, session_uuid, session_order, highlight_id, source_type, source_id, source_metadata, annotation, anchor, color, location_strategies, scope_id].hash
     end
 
     # Builds the object from hash
