# app/bindings/api/v0/bindings/nudged_v1.rb
@@ -14,14 +14,17 @@ require 'date'
 
 module Api::V0::Bindings
   class NudgedV1
-    # The RFC 3339 section 5.6 date-time when nudge actually occurred.
+    # The RFC 3339 section 5.6 date-time when event actually occurred.
     attr_accessor :client_clock_occurred_at
 
-    # The RFC 3339 section 5.6 date-time when nudge event was sent to the server.
+    # The RFC 3339 section 5.6 date-time when event was sent to the server.
     attr_accessor :client_clock_sent_at
 
     # The data's type.
     attr_accessor :type
+
+    # client browser location when event occurred.
+    attr_accessor :source_uri
 
     # The UUID of the current session, previously generated by the client and submitted in a \"session started\" event.
     attr_accessor :session_uuid
@@ -72,6 +75,7 @@ module Api::V0::Bindings
         :'client_clock_occurred_at' => :'client_clock_occurred_at',
         :'client_clock_sent_at' => :'client_clock_sent_at',
         :'type' => :'type',
+        :'source_uri' => :'source_uri',
         :'session_uuid' => :'session_uuid',
         :'session_order' => :'session_order',
         :'app' => :'app',
@@ -88,6 +92,7 @@ module Api::V0::Bindings
         :'client_clock_occurred_at' => :'DateTime',
         :'client_clock_sent_at' => :'DateTime',
         :'type' => :'String',
+        :'source_uri' => :'String',
         :'session_uuid' => :'String',
         :'session_order' => :'Integer',
         :'app' => :'String',
@@ -116,6 +121,10 @@ module Api::V0::Bindings
 
       if attributes.has_key?(:'type')
         self.type = attributes[:'type']
+      end
+
+      if attributes.has_key?(:'source_uri')
+        self.source_uri = attributes[:'source_uri']
       end
 
       if attributes.has_key?(:'session_uuid')
@@ -163,6 +172,10 @@ module Api::V0::Bindings
         invalid_properties.push('invalid value for "type", type cannot be nil.')
       end
 
+      if @source_uri.nil?
+        invalid_properties.push('invalid value for "source_uri", source_uri cannot be nil.')
+      end
+
       if @session_uuid.nil?
         invalid_properties.push('invalid value for "session_uuid", session_uuid cannot be nil.')
       end
@@ -202,6 +215,7 @@ module Api::V0::Bindings
       return false if @type.nil?
       type_validator = EnumAttributeValidator.new('String', ['org.openstax.ec.nudged_v1'])
       return false unless type_validator.valid?(@type)
+      return false if @source_uri.nil?
       return false if @session_uuid.nil?
       return false if @session_order.nil?
       return false if @app.nil?
@@ -230,6 +244,7 @@ module Api::V0::Bindings
           client_clock_occurred_at == o.client_clock_occurred_at &&
           client_clock_sent_at == o.client_clock_sent_at &&
           type == o.type &&
+          source_uri == o.source_uri &&
           session_uuid == o.session_uuid &&
           session_order == o.session_order &&
           app == o.app &&
@@ -248,7 +263,7 @@ module Api::V0::Bindings
     # Calculates hash code according to all attributes.
     # @return [Fixnum] Hash code
     def hash
-      [client_clock_occurred_at, client_clock_sent_at, type, session_uuid, session_order, app, target, context, flavor, medium].hash
+      [client_clock_occurred_at, client_clock_sent_at, type, source_uri, session_uuid, session_order, app, target, context, flavor, medium].hash
     end
 
     # Builds the object from hash
