# app/bindings/api/v0/swagger.json
@@ -170,17 +170,127 @@
         }
       }
     },
+    "NudgedV1": {
+      "properties": {
+        "client_clock_occurred_at": {
+          "type": "string",
+          "format": "date-time",
+          "description": "The RFC 3339 section 5.6 date-time when event actually occurred."
+        },
+        "client_clock_sent_at": {
+          "type": "string",
+          "format": "date-time",
+          "description": "The RFC 3339 section 5.6 date-time when event was sent to the server."
+        },
+        "type": {
+          "type": "string",
+          "description": "The data's type.",
+          "enum": [
+            "org.openstax.ec.nudged_v1"
+          ]
+        },
+        "source_uri": {
+          "type": "string",
+          "description": "client browser location when event occurred."
+        },
+        "session_uuid": {
+          "type": "string",
+          "format": "uuid",
+          "description": "The UUID of the current session, previously generated by the client and submitted in a \"session started\" event."
+        },
+        "session_order": {
+          "type": "integer",
+          "description": "The event's numerical order within this session. E.g. the first event after a session is started should give 0 for this field, the next one should give 1, etc."
+        },
+        "app": {
+          "type": "string",
+          "description": "The app sourcing the nudge (e.g., tutor."
+        },
+        "target": {
+          "type": "string",
+          "description": "The target of the nudge (e.g., study_guides)."
+        },
+        "context": {
+          "type": "string",
+          "description": "The nudge context (e.g., a book uuid)."
+        },
+        "flavor": {
+          "type": "string",
+          "description": "The nudge flavor (e.g., full screen v2)."
+        },
+        "medium": {
+          "type": "string",
+          "description": "The nudge medium (e.g., email)."
+        }
+      },
+      "required": [
+        "app",
+        "target",
+        "context",
+        "flavor",
+        "medium",
+        "client_clock_sent_at",
+        "client_clock_occurred_at",
+        "type",
+        "source_uri",
+        "session_uuid",
+        "session_order"
+      ]
+    },
+    "StartedSessionV1": {
+      "properties": {
+        "client_clock_occurred_at": {
+          "type": "string",
+          "format": "date-time",
+          "description": "The RFC 3339 section 5.6 date-time when event actually occurred."
+        },
+        "client_clock_sent_at": {
+          "type": "string",
+          "format": "date-time",
+          "description": "The RFC 3339 section 5.6 date-time when event was sent to the server."
+        },
+        "type": {
+          "type": "string",
+          "description": "The data's type.",
+          "enum": [
+            "org.openstax.ec.started_session_v1"
+          ]
+        },
+        "source_uri": {
+          "type": "string",
+          "description": "client browser location when event occurred."
+        },
+        "referrer": {
+          "type": "string",
+          "description": "The referrer."
+        },
+        "session_uuid": {
+          "type": "string",
+          "description": "The client generates this UUID and references it for all future events in this session."
+        }
+      },
+      "required": [
+        "referrer",
+        "session_uuid",
+        "client_clock_sent_at",
+        "client_clock_occurred_at",
+        "type",
+        "source_uri",
+        "session_uuid",
+        "session_order"
+      ]
+    },
     "AccessedStudyguideV1": {
       "properties": {
         "client_clock_occurred_at": {
           "type": "string",
           "format": "date-time",
-          "description": "The RFC 3339 section 5.6 date-time when nudge actually occurred."
+          "description": "The RFC 3339 section 5.6 date-time when event actually occurred."
         },
         "client_clock_sent_at": {
           "type": "string",
           "format": "date-time",
-          "description": "The RFC 3339 section 5.6 date-time when nudge event was sent to the server."
+          "description": "The RFC 3339 section 5.6 date-time when event was sent to the server."
         },
         "type": {
           "type": "string",
@@ -188,6 +298,10 @@
           "enum": [
             "org.openstax.ec.accessed_studyguide_v1"
           ]
+        },
+        "source_uri": {
+          "type": "string",
+          "description": "client browser location when event occurred."
         },
         "session_uuid": {
           "type": "string",
@@ -213,6 +327,7 @@
         "client_clock_sent_at",
         "client_clock_occurred_at",
         "type",
+        "source_uri",
         "session_uuid",
         "session_order"
       ]
@@ -222,12 +337,12 @@
         "client_clock_occurred_at": {
           "type": "string",
           "format": "date-time",
-          "description": "The RFC 3339 section 5.6 date-time when nudge actually occurred."
+          "description": "The RFC 3339 section 5.6 date-time when event actually occurred."
         },
         "client_clock_sent_at": {
           "type": "string",
           "format": "date-time",
-          "description": "The RFC 3339 section 5.6 date-time when nudge event was sent to the server."
+          "description": "The RFC 3339 section 5.6 date-time when event was sent to the server."
         },
         "type": {
           "type": "string",
@@ -235,6 +350,10 @@
           "enum": [
             "org.openstax.ec.created_highlight_v1"
           ]
+        },
+        "source_uri": {
+          "type": "string",
+          "description": "client browser location when event occurred."
         },
         "session_uuid": {
           "type": "string",
@@ -295,106 +414,7 @@
         "client_clock_sent_at",
         "client_clock_occurred_at",
         "type",
-        "session_uuid",
-        "session_order"
-      ]
-    },
-    "NudgedV1": {
-      "properties": {
-        "client_clock_occurred_at": {
-          "type": "string",
-          "format": "date-time",
-          "description": "The RFC 3339 section 5.6 date-time when nudge actually occurred."
-        },
-        "client_clock_sent_at": {
-          "type": "string",
-          "format": "date-time",
-          "description": "The RFC 3339 section 5.6 date-time when nudge event was sent to the server."
-        },
-        "type": {
-          "type": "string",
-          "description": "The data's type.",
-          "enum": [
-            "org.openstax.ec.nudged_v1"
-          ]
-        },
-        "session_uuid": {
-          "type": "string",
-          "format": "uuid",
-          "description": "The UUID of the current session, previously generated by the client and submitted in a \"session started\" event."
-        },
-        "session_order": {
-          "type": "integer",
-          "description": "The event's numerical order within this session. E.g. the first event after a session is started should give 0 for this field, the next one should give 1, etc."
-        },
-        "app": {
-          "type": "string",
-          "description": "The app sourcing the nudge (e.g., tutor."
-        },
-        "target": {
-          "type": "string",
-          "description": "The target of the nudge (e.g., study_guides)."
-        },
-        "context": {
-          "type": "string",
-          "description": "The nudge context (e.g., a book uuid)."
-        },
-        "flavor": {
-          "type": "string",
-          "description": "The nudge flavor (e.g., full screen v2)."
-        },
-        "medium": {
-          "type": "string",
-          "description": "The nudge medium (e.g., email)."
-        }
-      },
-      "required": [
-        "app",
-        "target",
-        "context",
-        "flavor",
-        "medium",
-        "client_clock_sent_at",
-        "client_clock_occurred_at",
-        "type",
-        "session_uuid",
-        "session_order"
-      ]
-    },
-    "StartedSessionV1": {
-      "properties": {
-        "client_clock_occurred_at": {
-          "type": "string",
-          "format": "date-time",
-          "description": "The RFC 3339 section 5.6 date-time when nudge actually occurred."
-        },
-        "client_clock_sent_at": {
-          "type": "string",
-          "format": "date-time",
-          "description": "The RFC 3339 section 5.6 date-time when nudge event was sent to the server."
-        },
-        "type": {
-          "type": "string",
-          "description": "The data's type.",
-          "enum": [
-            "org.openstax.ec.started_session_v1"
-          ]
-        },
-        "referrer": {
-          "type": "string",
-          "description": "The referrer."
-        },
-        "session_uuid": {
-          "type": "string",
-          "description": "The client generates this UUID and references it for all future events in this session."
-        }
-      },
-      "required": [
-        "referrer",
-        "session_uuid",
-        "client_clock_sent_at",
-        "client_clock_occurred_at",
-        "type",
+        "source_uri",
         "session_uuid",
         "session_order"
       ]
